examples/passing/Tick.purs
module Tick where

test' x = x

module Main where

main = Debug.Trace.trace "Done"
