examples/failing/Let.purs
module Main where

test = let x = x in x
